Mejoras para Sonar